<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/reset_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/reset_rating"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset_rating"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_rating" />

    <CheckBox
        android:id="@+id/btn_reset_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/btn_reset_all"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_bio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/reset_bio"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset_bio"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_bio" />

    <CheckBox
        android:id="@+id/btn_reset_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/reset"
        app:layout_constraintStart_toStartOf="@+id/btn_reset_all"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_rating" />

    <TextView
        android:id="@+id/reset_all"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/reset_bio"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset_all"
        app:layout_constraintEnd_toStartOf="@+id/btn_reset_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_all" />

    <CheckBox
        android:id="@+id/btn_reset_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="resetClicked"
        android:text="@string/reset_all_btn"
        app:layout_constraintBottom_toTopOf="@+id/apply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/reset_all" />

    <Button
        android:id="@+id/apply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="applyClicked"
        android:text="@string/apply"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>